--- a/languages/tr/persona.json
+++ b/languages/tr/persona.json
@@ -1,4 +1,6 @@
 {
     "mobile-menu-side": "Mobil menünün bulunduğu tarafı değiştir",
     "post-quick-reply": "Hızlı Cevap Gönder"
+    "help.location": "Yaşadığınız Şehir veya Eyalet ismini giriniz."
+    "location": "Konum"
 } 
