--- a/languages/en-US/persona.json
+++ b/languages/en-US/persona.json
@@ -1,3 +1,6 @@
 {
     "mobile-menu-side": "Switch which side each mobile menu is on"
+    "post-quick-reply": "Post quick reply"
+    "help.location": "Yaşadığınız Şehir veya Eyalet ismini giriniz."
+    "location": "Konum"
 }
