--- a/languages/en-GB/persona.json
+++ b/languages/en-GB/persona.json
@@ -1,6 +1,6 @@
 {
     "mobile-menu-side": "Switch which side each mobile menu is on",
-    "post-quick-reply": "Post quick reply"
-    "help.location": "Please enter the city or state you live in."
+    "post-quick-reply": "Post quick reply",
+    "help.location": "Please enter the city or state you live in.",
     "location": "Location"
 }
